# TranscriptomeAtlas

./: .gitignore  LICENSE  Makefile  README.md  environment.Linux-5.15.0-84-generic-x86_64-with-glibc2.35.linux.lock.yml  environment.yaml  logo.txt  main.py  pyproject.toml  requirements.txt
.mks/: .post-create-environment.txt  .post-delete-environment.txt  am_i_ready.py  envs.mk  help.mk  include.mk
benchmarks/notebooks/: 1_rawdata.ipynb  2_deseq2.ipynb  3_wgcna.ipynb  4_comparaison.ipynb  boxplot.ipynb  env.yaml  snakefile.py  wgcna_restored.ipynb
benchmarks/src/script/: geoid1.sh
script/: geoid.sh
script/rscript/: analyse deseq2.R  deseq2.R  wgcna.R
