[project]
name = "transcriptomeatlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "itables>=2.4.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "matplotlib-venn>=1.1.2",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
